--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ djangorestframework==3.15.1
 gunicorn==22.0.0
 Markdown==3.6
 packaging==24.0
+psycopg2-binary==2.9.9
 sqlparse==0.5.0
 typing_extensions==4.12.0
